modify create and update user

--- a/src/features/auth/components/login.css
+++ b/src/features/auth/components/login.css
@@ -23,7 +23,7 @@
 }
 .image_page {
   position: relative;
-  background: url(https://cdn.24h.com.vn/upload/1-2020/images/2020-02-18/1582021069-694-choang-vang-voi-co-gia-su-nguc-ngon-ngon-truy-tim-ly-lich-dan-mang-con-soc-hon-cogiaoboclua-3-1581815612-width640height799.jpg)
+  background: url(https://image.shutterstock.com/z/stock-vector-modern-warehouse-barn-building-colorful-logo-design-overlapping-style-1493247950.jpg)
     no-repeat;
   background-size: 100% 100vh;
   flex: 3;
