--- a/src/features/auth/components/login.css
+++ b/src/features/auth/components/login.css
@@ -1,11 +1,11 @@
 .root-login {
   /* TODO: think again */
-  background: rgb(59, 216, 51);
-  background: linear-gradient(
+  background: rgb(228, 229, 233);
+  /* background: linear-gradient(
     30deg,
     rgba(59, 216, 51, 1) 50%,
     rgba(93, 99, 237, 1) 70%
-  );
+  ); */
 }
 .main-page {
   padding: 60px 120px;
@@ -19,7 +19,7 @@
   border-radius: 10px;
   text-align: center;
   height: 100%;
-  box-shadow: 0px 0px 20px 4px #2ea513;
+  box-shadow: 0px 0px 10px 4px #cccccc;
 }
 .image_page {
   position: relative;
@@ -55,7 +55,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #eeeeee;
+  background-color: rgb(51, 136, 216);
   position: relative;
   border-bottom-right-radius: 10px;
   border-top-right-radius: 10px;
@@ -87,7 +87,7 @@
 .title {
   margin-top: 30px;
   font-weight: 900;
-  color: green;
+  color: #ffffff;
 }
 .footer {
   position: absolute;
